--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,19 @@
+body {
+    background-color: #E7E7DE;
+}
 
+hr {
+    border-style: none;
+    border-top-style: dotted;
+    border-color: #0f3057;
+    border-width: 5px;
+    width: 5%;
+}
+
+h1 {
+    color: #00587a;
+}
+
+h3 {
+    color: #008891;
+}
